# BeautyWidgets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  beautywidgetsdemo.h  beautywidgetsdemo.ui  main.cpp
src/: beautylineedit.cpp  beautylineedit.h  beautypushbutton.cpp  beautypushbutton.h
